# harmony_research_interface

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker-image.sh  build-in-docker.sh  check-harmony-versions.sh  cross.txt  deploy-to-harmony.sh  meson.build  ssh-harmony.sh
application/: CMakeLists.txt
application/harmony_perturb_torques/: CMakeLists.txt  perturbTest.cpp  torqueWrapper.h
application/harmony_ros_interface/: CMakeLists.txt  README.md  harmony_services.cpp  harmony_services.h  harmony_topics.cpp  harmony_topics.h  main.cpp  message_utils.cpp  message_utils.h
application/realtime_logger/: CMakeLists.txt  log_manager.cpp  log_manager.h  main.cpp
docs/: deployment.md  installation.md  setup.md  troubleshooting.md
include/: arm_controller.h  joint_states.h  overrides.h  pose.h  research_interface.h  shared_memory.h  shared_memory_manager.h  sizes.h
resources/: CMakeLists.txt
resources/file_handling/: .gitmodules  CMakeLists.txt
resources/file_handling/include/: csv_handling.h  data_types_handling.h  file_exception_handling.h  json_handling.h
resources/file_handling/src/: csv_handling.cpp  file_exception_handling.cpp  json_handling.cpp
tests/: arm_controller_tests.cpp  joint_states_tests.cpp  meson.build  research_interface_tests.cpp  shared_memory_manager_tests.cpp  size_tests.cpp
tools/: CMakeLists.txt  controller_printer.cpp  data_exerciser.cpp  data_logger.cpp  meson.build  reset_shared_memory.cpp  set_controller.cpp  stub_harmony.cpp  value_printer.cpp
